Made all monome code use liblo for OSC communication instead of raw serial libmonome. rove_monome.c now contains a few basic hackish wrappers for libmonome functions that instead use OSC, which will eventually be fleshed out and moved into libmonome.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,5 @@
 CFLAGS  += -I. -I../include -I/usr/include
-LDFLAGS += -lmonome -ljack -lsndfile
+LDFLAGS += -ljack -lsndfile -llo
 TARGETS = rove
 
 OBJS  = rove.o
