Added libsamplerate optional dependency.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,5 @@
-CFLAGS  += -I../include $(LO_CFLAGS) $(JACK_CFLAGS) $(SNDFILE_CFLAGS)
-LDFLAGS += $(LO_LIBS) $(JACK_LIBS) $(SNDFILE_LIBS)
+CFLAGS  += -I../include $(LO_CFLAGS) $(JACK_CFLAGS) $(SNDFILE_CFLAGS) $(SRC_CFLAGS)
+LDFLAGS += $(LO_LIBS) $(JACK_LIBS) $(SNDFILE_LIBS) $(SRC_LIBS)
 TARGETS = rove
 
 OBJS  = rove.o
