Added configure and Makefile variables for libmonome.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,5 @@
-CFLAGS  += -I../include $(LO_CFLAGS) $(JACK_CFLAGS) $(SNDFILE_CFLAGS) $(SRC_CFLAGS)
-LDFLAGS += $(LO_LIBS) -rdynamic $(JACK_LIBS) $(SNDFILE_LIBS) $(SRC_LIBS)
+CFLAGS  += -I../include $(MONOME_CFLAGS) $(LO_CFLAGS) $(JACK_CFLAGS) $(SNDFILE_CFLAGS) $(SRC_CFLAGS)
+LDFLAGS += $(MONOME_LIBS) $(LO_LIBS) -rdynamic $(JACK_LIBS) $(SNDFILE_LIBS) $(SRC_LIBS)
 TARGETS = rove
 
 OBJS  = rove.o
