--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,5 @@
-CFLAGS  += -I../include $(MONOME_CFLAGS) $(JACK_CFLAGS) $(SNDFILE_CFLAGS) $(SRC_CFLAGS)
-LDFLAGS += $(MONOME_LIBS) $(JACK_LIBS) $(SNDFILE_LIBS) $(SRC_LIBS) -rdynamic
+CFLAGS  += -rdynamic -I../include $(MONOME_CFLAGS) $(JACK_CFLAGS) $(SNDFILE_CFLAGS) $(SRC_CFLAGS)
+LDFLAGS += -rdynamic $(MONOME_LIBS) $(JACK_LIBS) $(SNDFILE_LIBS) $(SRC_LIBS)
 TARGETS = rove
 
 OBJS  = rove.o
