--- a/src/Makefile
+++ b/src/Makefile
@@ -22,6 +22,7 @@ clean:
 install: all
 	echo -e "    \033[1mINSTALL\033[0m $(BINDIR)/rove"
 	$(INSTALL) -d $(BINDIR)
+	$(INSTALL) rove $(BINDIR)
 
 rove: $(OBJS)
 	echo -e "    \033[1mLD\033[0m      src/rove"
